# swim-rs

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
analysis/: cluster_ts.py  compile_parameters.py  group_comparison.py  metrics.py  results_comparison.py  station_comparison.py
calibrate/: build_etd_pp.py  build_etd_pp_multi.py  build_pp_files.py  calibrate_by_station.py  calibrate_station_group.py  chunk_pest.py  custom_forward_run.py  enkf_utils.py  lenkf.py  pest_builder.py  post_run_analysis.py  pre_run_analysis.py  run_mp.py  run_pest.py
data_extraction/: ee_props.py  ee_utils.py  etf_export.py  ndvi_export.py
data_extraction/ee/: ee_era5.py  ee_props.py  ee_utils.py  etf_export.py  ndvi_export.py  snodas_export.py
data_extraction/gridmet/: gridmet.py  thredds.py
data_extraction/snodas/: snodas.py
docs/: algorithm_description.md  api.md  container_architecture.md  data_extraction.md  et-demands-compare.md  how_to.md  index.md  installation.md  process_architecture.md  requirements.txt  swim_cli_cheatsheet.md  template.toml  toml_requirements.md
docs/api/: calibrate.md  index.md  (+5 more)
examples/: README.txt  calibrate_by_station.py  calibrate_group.py  data_extract.py  data_prep.py  evaluate.py  evaluate_group.py  run.py
forecast/: ndvi_forecast.py
model/: __init__.py  calculate_height.py  compute_field_et.py  compute_snow.py  day_data.py  grow_root.py  initialize.py  k_dynamics.py  lenkf.py  obs_field_cycle.py  obs_kcb_daily.py  runoff.py  tracker.py
prep/: __init__.py  dynamics.py  field_properties.py  field_timeseries.py  landsat_sensing.py  ndvi_regression.py  prep_plots.py  prep_readme.txt  preproc_etd.py  remote_sensing.py
prior_development/: prior_dev_points_selection.py
run/: initialize.py  run.py  run_field_etd.py  run_field_etd_mp.py  run_field_etrm_mp.py  run_flux.py  run_flux_etd.py  run_flux_etrm.py  run_mp.py  run_predictions.py  run_tongue_predictions.py  run_tutorial.py
scripts/: convert_legacy_input.py  generate_golden_files.py  generate_golden_loop.py  setup_test_fixtures.py
swim/: config.py  input.py
tests/: conftest.py  test_cli_single_site_flow.py  test_cli_smoke.py  test_compute_field_et.py  test_container_multi_station.py  test_container_single_station.py  test_dynamics_parity.py  test_export_parity.py  test_k_dynamics.py  test_runoff.py  test_workflow_integration.py
tutorials/: calibrate_by_station.py  calibrate_group.py  data_extract.py  data_prep.py  evaluate.py  evaluate_group.py  run.py
utils/: concatenate_output.py  debug_flux.py  google_bucket.py
viz/: __init__.py  irrigation_dynamics.py  param_evolution.py  swim_timeseries.py
(+600 files in other folders)
