[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimrs"
version = "0.1.0"
description = "Soil Water balance Inverse Modeling using Remote Sensing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-4.0" }
authors = [{ name = "SWIM-RS Developers" }]
dependencies = [
  "pyemu",
  "pandas",
  "geopandas",
  "xarray",
  "toml",
  "scikit-learn",
  "plotly",
  "openet-refet-gee",
  "pydantic>=1.10",
  "zarr>=2.18",
  "filelock",
]

[project.scripts]
swim = "swimrs.cli:main"

[project.urls]
Homepage = "https://github.com/dgketchum/swim-rs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["swimrs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
src = ["src","tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
